# semicomplete-googlecode-archive

HTTP::Handle/: Makefile.old
bandmon/: bandmon.c
binutils/: cdiff  d  hostlist  less-custom  mailgraph  mailgraph_generate  mysql_adduser  new  nvi  rshall  screener.sh  sshall  thread.orig
bungiemap/: Makefile  annotate.pl  encode.pl  fadetoblack.sh  makeintro.sh
c-proj8/: foo.c
calmon/: README  calmond.rb  calmond.yaml  example.rb
cgrok/: .onig.c.swp  CHANGELIST  CONCEPTS  FILES  INSTALL  Makefile  REQUIREMENTS  bmain.c  boost_xpressive_test.cpp  conf.lex  conf.y  fileobserver.hpp  filetest.cpp  filters.gperf  grok-patterns  grok.c  grok.conf  grok.h  grok_capture.c  grok_capture.h  grok_capture.x  grok_config.c  grok_config.h  grok_config.lex  grok_config.y  grok_input.c  grok_input.h  grok_match.c  grok_match.h  grok_matchconf.c  grok_matchconf.h  grok_matchconf_filter.gperf  grok_matchconf_filter.h  grok_matchconf_macro.gperf  grok_matchconf_macro.h  grok_pattern.c  grok_pattern.h  grok_program.c  grok_program.h  grokconfig.hpp  (+29 more)
cgrok/grokpcre/: Makefile  NOTES  grok.h  grokre.c  pcregrok_patterns  predicates.c  predicates.h  stringhelper.c
cgrok/pygrok/: DOCUMENTATION  Makefile  example.py  pygrok.cpp  pygrokmatch.hpp  pygrokregex.hpp  setup.py
cgrok/ruby/: rgrok.h  ruby_grok.c  ruby_grokmatch.c  sample.rb
cgrok/sandbox/: Makefile  escape.cpp  semboost.cpp
cgrok/swig/: Makefile  grok.swig
cgrok/t/: Makefile  generate_pattern_test.sh  grok.test  patterns.test  patterns.test_template
cgrok/test/: Makefile  grok_capture.test.c  grok_pattern.test.c  grok_simple.test.c  predicates.test.c  runtest.sh  stringhelper.test.c  test.h  test_predicates.c
codesamples/: bdb-functionpointer-test.c  cairo-xshape-example.c  dlopen_self.c  elasticsearch-test.rb  getpwent.c  imlib-screencap.c  libevent-execwatch.c  libevent-filefollow.c  pixmap.c  shebang.c  strcmp.c  test-thread-lseek-race.c  tokyocabinet-memtree.c  tsearch-example.c  xmap.c
codesamples/em/: em-fast-channel.rb
codesamples/ffi/: grokffi.rb
codesamples/jnihelper/: Makefile  jnihelper.c  testjava.c
codesamples/log4j/: LogTest.java  log4j.properties
codesamples/puppet/: exec-creates-dir.pp  f.pp  package.pp  puppet-parser-elsewhere.rb  unmanaged-notify.pp
codesamples/ragel/: syslog_proto_re.rb  syslog_protocol.rl
codesamples/thrift/: encoding-only.rb  server.rb
cppgrok/grokpcre/: CONCEPTS  grokre.c  pcregrok_patterns  stringhelper.c
cuecat/: cuecat.c  decode.c
datacomm/doc/: DevelopmentProcess.txt  Part3Feasibility.txt
datacomm/src/: BSGame.java  BSGrid.java  BSTCPServer.java  BSUDPServer.java  BattleshipPlayer.java  BattleshipServer.java  Client.java  ErrorResponse.java  FireCommand.java  HelloCommand.java  HelloResponse.java  Message.java  NewuserResponse.java  PasswordCommand.java  Response.java  Server.java  StartgameResponse.java  TCPPlayer.java  TCPServer.java  (+2 more)
dhcpsquash/: Makefile  dhcpgen.c  sniffer.c
diesel/: lighter
dxargs/: .dxargs.py.swp  dxargs.py
ethernut/: Makefile  busmaster.h  common.h  i2c.c  log.c  main.c  network.h  twif.c  twif.h
eventdb/: cherrycollector.py  eventcollector.py
eventmachine-tail/: Rakefile  eventmachine-tail.gemspec  filetail.rb
fex/: README
flickr/: .fetch.py.swp  fetch.py  flickr.key
grok/: FILES  README
jquerycmd/: application.ini  getpath.sh  jquerycmd.sh
keynav/: README
liboverride/: Makefile  a.out  bind.over  bindandswitch.over  bindandswitch.rb  bindsetuid.over  connect.over  fake-nosendevent.over  funcdefs  getpwnam.over  grab.over  read_example.over  socket.c  socket.over  test.over  xtest.over
loggregate/: NOTES
m4site/: .test.in.swp  Makefile  generate.m4  header.m4  layout.m4  logo.m4  macros.m4  menu.m4  resume.css  test.in
moused-vscroll/: moused.c
navmacro/: Makefile  Makefile.no-pkg-config  navmacro.c  querytree.c  xdo.c  xdo.h  xdo_util.h  xdotool.c  xmap.c  xtest.c
nethackbingeboard/: bingerpc.py  index.html  test.html
pam_captcha/: pam_captcha.c
pam_logfailure/: Makefile  pam_logfailure.c  pam_success.c
pamchallenge/: Makefile  pam.c  pam_captcha.c
pmb/: backup  checkfile  pmb  pmb.rc  recover
reactor/: reactor.rb  reactor.yaml  thoughts
ruby-ctime/: CTime.c  Makefile  extconf.rb  test.rb
runbox/: Makefile  runbox.c  xt.c
securitrack/: config.xml
spanningtree/: Makefile  carp.c  graph.c  kruskal.c  linkedlist.c  linkedlist.h  malloc.c  prim.c  test.c  testgraph.c  tree.c
stats/: .freebsd-netstat.sh.swo  .freebsd-netstat.sh.swp  design  eventdb.py  evtool.py  fetch2rrd.sh  freebsd-netstat.sh  logp.py  miscdb.py  statpoll.sh  stats.py  test.py  test.sh  test1.sh  testdict.py  testrandom.sh  testtonka.sh  testxsquared.sh
sysadvent/: LICENSE  svn-commit.tmp
tools/: LICENSE  mkjail.sh  puppet-cycle-to-dot.rb  run-xterm.sh  screen-activate.sh  screen-find.sh  screen-session-hardcopy.sh  screen-session-search.sh  screenps.sh  sfind.sh  wifipencap.sh
trunk/xboxproxy/: Makefile  Makefile.am  autofu.sh  configure  configure.ac  main.h
trunk/xboxproxy/src/: Makefile.am  log.c  log.h  main.c  ugly.c
wiki/: CalmonDesignDoc.wiki  EventMachineTail.wiki  Grok.wiki  GrokConcepts.wiki  GrokConfig.wiki  GrokDiscovery.wiki  GrokExamples.wiki  GrokPredicates.wiki  GrokProgramReactions.wiki  GrokProgramTutorial.wiki  SlashPort.wiki  Thoughts-Monitoring.wiki  ThoughtsMonitoring.wiki
xboxproxy/tags/PROXY_1_6/src/: Makefile.am  log.c  main.c
xboxproxy/tags/working/: Makefile.am  config.h.in  configure.ac
xboxproxy/trunk/: Makefile  Makefile.am  autofu.sh  config.h.in  configure  configure.ac
xboxproxy/trunk/.deps/: hash.Po  log.Po  main.Po
xboxproxy/trunk/src/: Makefile.am  log.c  log.h  main.c  network.c  ugly.c
xdotool/: README
xml-website/: .Makefile.swp  .header.xml.swp  .htaccess  .test.pm.swp  Makefile  index.xml  style.css  website.xsl
xmlpresenter/: .example.xpl.swp  example.xpl  presenter.css  presenter.js  presenter.xsl  test
xmlsitebook/: Makefile  sitebook.xml  sitebook.xsl  testplan.xml
xpathtool/: .xpathtool.swp  release.sh  xpathtool.sh
xscroll/: Imakefile
(+495 files in other folders)
