bin_PROGRAMS = xboxproxy
xboxproxy_SOURCES= main.c hash.c log.c hash.h log.h

CC = @CC@
CFLAGS = -I. @CFLAGS@ @LIBNET_CFLAGS@
LDFLAGS = @LDFLAGS@ @LIBNET_LDFLAGS@
LIBS = @LIBS@ 
INSTALL = @INSTALL@
prefix = @prefix@
exec_prefix = @exec_prefix@
bindir = $(exec_prefix)/bin
libdir = $(prefix)/lib
infodir = $(prefix)/info


